app/assets/stylesheets/custom.css.scss
@import "bootstrap";

/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-top: 3rem;
  padding-bottom: 3rem;
  color: #5a5a5a;
}


/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  margin-bottom: 4rem;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  bottom: 3rem;
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel-item {
  height: 32rem;
  background-color: #777;
}
.carousel-item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 32rem;
}


/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 1.5rem;
  text-align: center;
}
.marketing h2 {
  font-weight: 400;
}
.marketing .col-lg-4 p {
  margin-right: .75rem;
  margin-left: .75rem;
}



/* Starting my custom css: */
body {
  padding-top: 72px;
}


.container {
  max-width: 960px;
}

.navbar a {
  color: #fff
}
.bg-company-blue {
  background-color: #007BFF
}
.nav-item {
  padding-left: 20px;
  font-size: 1em;
  line-height: 200%;
  padding-top: 0;
}
.carousel-inner img {
  object-fit: cover;
}
// .navbar {
//   padding-bottom: 0px;
//   height: 55px;
// }

/*
 * Custom translucent site header
 */

// .site-header {
//   background-color: rgba(0, 0, 0, .85);
//   -webkit-backdrop-filter: saturate(180%) blur(20px);
//   backdrop-filter: saturate(180%) blur(20px);
// }
// .site-header a {
//   color: #fff;
//   transition: ease-in-out color .15s;
// }
// .site-header a:hover {
//   color: #999;
//   text-decoration: none;
// }

// .site-header {
//   margin-bottom: 0px;
// }

/*
 * Dummy devices (replace them with your own or something else entirely!)
 */

.product-device {
  position: absolute;
  right: 10%;
  bottom: -30%;
  width: 300px;
  height: 540px;
  background-color: #333;
  // background-image: url('veggies2.jpg');
  
  // border: 15px solid black;
  border-radius: 21px;
  -webkit-transform: rotate(30deg);
  transform: rotate(30deg);
}

.product-device::before {
  position: absolute;
  top: 10%;
  right: 10px;
  bottom: 10%;
  left: 10px;
  content: "this is content";
  background-color: rgba(255, 255, 255, .1);
  border-radius: 5px;
}

.product-device-2 {
  top: -25%;
  right: auto;
  bottom: 0;
  left: 5%;
  background-color: #e5e5e5;
}
.img-responsive {
  height: 100%;
  width: 100%;
}
.img-1 {
  border: 10px solid black;
}
.img-1-phone {
 
  border: 7px solid black;
  border-top: 30px solid black;
  
}

/*
 * Extra utilities
 */

.border-top { border-top: 1px solid #e5e5e5; }
.border-bottom { border-bottom: 1px solid #e5e5e5; }

.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }

.flex-equal > * {
  -ms-flex: 1;
  flex: 1;
}
@media (min-width: 768px) {
  .flex-md-equal > * {
    -ms-flex: 1;
    flex: 1;
  }
}

.overflow-hidden { overflow: hidden; }

#logo {
  margin-top: 3px;
  font-size: 1.3em;
  font-weight: bold;
}
#logo:hover {
  color: #fff;
  text-decoration: none;
}
.directions {
  margin-top: 0px;
}
// .card a {
//   color: ;
// }
.site-header {
  background-color: #007BFF;
}



.rounded-circle {
  border-radius: 50%;
}
// .chef_info {
//   border-radius: 50%;
// }
.gravatar {
  border-radius: 50%;
}
.btn-lg:hover {
  background-color: #8860D0;
}
.card .bg-danger {
  background-color: #D83F87!important;
}
.recipe-actions {
  padding-top: 5px;
  a {
    color: #fff;
  }
}

.listing {
  list-style: none;
  // padding-left: 0;
}
.chef-title {
  color: #007BFF;
  font-weight: 550;
  font-size: 1.25em;
}
.pagination {
  padding-top: 5px;
}
.dropdown-item-text {
  background-color: #007BFF;
}
.comments-container {
  margin-left: 325px;
}
.mx-auto {
  float: none;
}
.chat-container {
  bottom: 0;
  left: 0;
  right: 0;
  top: 150px;
  width: 80;
}
.message-container {
  .form-control {
    float: left;
    width: 80%;
  }
  .btn {
    float: right;
    position: relative;
    height: 54px !important;
    width: 18%;
  }
}
.message {
  padding-left: 5px;
  padding-top: 10px;
}
.messages {
  border: 1px solid #eaeaea;
  height: 16em;
  position: relative;
  overflow: auto;
}

.comment-margin {
  margin-left: 220px;
  padding-left: 40px;
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -.05rem;
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 40em) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 1.25rem;
    font-size: 1.25rem;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 62em) {
  .featurette-heading {
    margin-top: 7rem;
  }
}

